# firestorm

./: .dockerignore  .env  .env.dev  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .vercelignore  Cargo.toml  Dockerfile  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  push-notify.yml
crates/moe/: Cargo.toml  build.fish  build.sh
crates/moe/src/: account.rs  api.rs  attachments.rs  device.rs  json_web_key.rs  lib.rs  main.rs  message.rs  store.rs  wasm.rs
crates/moe/src/managers/: group_session.rs  olm_session.rs
crates/moe/src/serde/: base64.rs  cow.rs  mod.rs
crates/moe/src/sessions/: inbound.rs  outbound.rs
crates/moe/src/worker/: decrypt_attachment.rs  encrypt_messages.rs  mod.rs
crates/push-notif/: Cargo.toml  Dockerfile
crates/push-notif/src/: main.rs
playwright/: config.ts  utils.ts
playwright/static/: test.txt
playwright/tests/: auth.spec.ts  messages.spec.ts  rooms.spec.ts
src/: app.css  app.d.ts  app.html  database.d.ts  hooks.server.ts  service-worker.ts
src/lib/: attachments.ts  e2ee.spec.ts  e2ee.ts  notifications.ts  supabase.ts  utils.ts
src/lib/components/: IconButton.svelte  ProfileDropdown.svelte  ProfileUpdate.svelte  SideNav.svelte  SideNavGeneric.svelte
src/lib/components/SideNav/: CreateRoomModal.svelte  SideNav.svelte  SidebarItem.svelte  store.ts
src/lib/components/attachments/: AttachmentPreview.svelte
src/lib/db/: keys.ts  messages.ts  rooms.ts  users.ts
src/lib/server/: db.ts
src/lib/trpc/: client.ts  context.ts  router.ts  trpc.ts
src/lib/trpc/routes/: messages.ts  users.ts
src/lib/utils/: messageChunks.test.ts  messageChunks.ts  timestamps.ts
src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
src/routes/(app)/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(auth)/auth/: +page.svelte  SignIn.svelte  SignUp.svelte  utils.ts
src/routes/(profiles)/profile/: +layout.svelte
src/routes/auth/: +page.svelte
supabase/: config.toml  seed.sql  waiter.js
supabase/functions/: import_map.json
supabase/functions/_shared/: db.ts  trpc.ts
supabase/functions/push-notify/: index.ts
supabase/functions/trpc/: index.ts
supabase/migrations/: 20230416183132_rooms.sql  20230417175749_profiles.sql  20230418095928_messages.sql  20230419141242_create_room.sql  20230423201705_invites.sql  20230508102314_constraints.sql  20230517194908_message_notifications.sql  20230518122750_message_notifications_2.sql  20230527210539_attachments.sql  20230616210047_reply_to_message.sql  20230701182555_sveltekit-api-push-notifications.sql  20230706125524_buckets.sql  20230710211839_olm_keys.sql  20230717170343_key_requests.sql  20230910131703_devices.sql  supabase_bs.sql  tables.sql
supabase/not-actually-migrations/: 20230416183132_rooms.sql  20230417175749_profiles.sql  20230418095928_messages.sql  20230419141242_create_room.sql  20230423201705_invites.sql  20230506114214_avatars.sql  20230517194908_message_notifications.sql  20230527210539_attachments.sql  20230616202338_message_deletions.sql  20230701182555_sveltekit-api-push-notifications.sql  20230706125524_buckets.sql  20230710211839_olm_keys.sql  20230717170343_key_requests.sql  20230910131703_devices.sql
(+29 files in other folders)
