[package]
name = "moe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.8.0"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.34"

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"

# crypto
vodozemac = { version = "0.3.0", default-features = true, features = ["js"] }
aes = "0.8"
base64 = "0.21.0"
rand = { version = "*" }
zeroize = "*"
sha2 = "*"
ctr = "0.9.2"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "File"
]