[package]
name = "moe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
console_error_panic_hook = "0.1.7"
ducktor = "0.1.0"
flurry = { version = "0.4.0", features = ["serde"] }
getrandom = { version = "0.2.10", features = ["js"] }
gloo = "0.10.0"
js-sys = "0.3.64"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.37"
vodozemac = { git = "https://github.com/matrix-org/vodozemac", version = "0.4.0" }
wasm-bindgen = "0.2.87"
wasm-bindgen-test = "0.3.37"
web-sys = "0.3.64"
