[package]
name = "push-notif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono" ] }
chrono = { version = "0.4.24", features = ["clock", "std"]}
web-push = { version = "0.9.5", features = ["hyper-client"], default-features = false }
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.96"
